# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml
page_loader/: __init__.py  loader.py  logger_config.py
page_loader/scripts/: main.py
tests/: test_loader.py  test_main.py
tests/fixtures/: ru-hexlet-io-courses-python-oop-basics.html  ru-hexlet-io-lessons.rss
