[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "CLI for loading internet page"
authors = ["Nazar Annakhalov <nazar.annahalov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
