[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "CLI for loading internet page"
authors = ["Nazar Annakhalov <nazar.annahalov@yandex.ru>"]
packages = [
    { include = "page_loader" },
]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.main:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
